--- a/README
+++ b/README
@@ -17,7 +17,9 @@ Sample input:
   ["B","R","-","R","B","-","-","-"]
 ]
 
-Most of the interesting code is in app/http/controllers/CheckersController.php
+Locally, in each virtual machine, the application can be found in /var/www/html/checkers
+
+Most of the interesting code is in App/Http/Controllers/CheckersController.php
 
 Additionally, Vagrant is used to instantiate three virtualboxes and runs an Ansible playbook that automates all of the installation and configuration work.
 
